make sure nokia rule is important
without !important the rule does not apply and text remains highlighted
black and unreadable

--- a/stylesheets/nokia.css
+++ b/stylesheets/nokia.css
@@ -1,4 +1,4 @@
 /* empty */
 #search {
-	background-color: white; /* see bug 36490 */
+	background-color: white !important; /* see bug 36490 */
 }
